# quadcopter

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  motor.rs  pid.rs
